[package]
name = "diligent"
version = "0.1.0"
edition = "2021"
exclude = ["**/assets"]

description = "A port of the Diligent Engine to Rust"

license-file = "LICENSE.md"

[dependencies]
static_assertions = "1.1.0"
bitflags          = "2.6.0"
imgui             = "0.12.0"
clap              = { version = "4.5.30", features = ["cargo"] }
glam              = "0.30.0"

[target.'cfg(unix)'.dependencies]
xcb = { version = "1.5.0" }

[target.'cfg(windows)'.dependencies]
windows = {version = "0.60.0" , features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging",] }

[dependencies.diligent_sys]
path = "diligent_sys"

[features]
default = ["vulkan"]

vulkan = ["diligent_sys/vulkan"]
vulkan_interop = ["vulkan", "diligent_sys/vulkan_interop"]

opengl = ["diligent_sys/opengl"]
opengl_interop = ["opengl", "diligent_sys/opengl_interop"]

d3d11 = ["diligent_sys/d3d11"]
d3d11_interop = ["d3d11", "diligent_sys/d3d11_interop"]

d3d12 = ["diligent_sys/d3d12"]
d3d12_interop = ["d3d12", "diligent_sys/d3d12_interop"]

[lib]
name = "diligent"

[[example]]
name = "Tutorial01_HelloTriangle"
path = "src/samples/tutorials/tutorial01_hello_triangle.rs"

[[example]]
name = "Tutorial02_Cube"
path = "src/samples/tutorials/tutorial02_cube.rs"
