[package]
name         = "diligent"
version      = "0.1.2"
edition      = "2024"
categories   = ["graphics", "rendering"]
description  = "A port of the Diligent Engine to Rust"
exclude      = ["**/assets"]
keywords     = ["diligent", "engine", "graphics", "cross-platform", "vulkan"]
license-file = "LICENSE.md"
repository   = "https://github.com/bsella/diligent"

[dependencies]
diligent_sys      = { path = "./diligent_sys", version = "2.5.5"}
static_assertions = "1.1.0"
bitflags          = "2.9.2"
bon               = "3.7.1"
paste             = "1.0.15"

[features]

vulkan = ["diligent_sys/vulkan"]
vulkan_interop = ["vulkan", "diligent_sys/vulkan_interop"]

opengl = ["diligent_sys/opengl"]
opengl_interop = ["opengl", "diligent_sys/opengl_interop"]

d3d11 = ["diligent_sys/d3d11"]
d3d11_interop = ["d3d11", "diligent_sys/d3d11_interop"]

d3d12 = ["diligent_sys/d3d12"]
d3d12_interop = ["d3d12", "diligent_sys/d3d12_interop"]

metal = ["diligent_sys/metal"]
metal_interop = ["metal", "diligent_sys/metal_interop"]

gles = ["diligent_sys/gles"]
gles_interop = ["gles", "diligent_sys/gles_interop"]

webgpu = ["diligent_sys/webgpu"]
webgpu_interop = ["webgpu", "diligent_sys/webgpu_interop"]

[lib]
name = "diligent"

[workspace]
resolver = "2"
members = ["tools", "samples"]