[package]
name = "diligent_sys"
version = "0.1.0"
edition = "2021"
build = "build.rs"
exclude = ["/DiligentEngine", "**/assets"]

[build-dependencies]
bindgen = "0.71.1"
cmake   = "0.1.54"

[features]
vulkan = []
vulkan_interop = ["vulkan"]

opengl = []
opengl_interop = ["opengl"]

d3d11 = []
d3d11_interop = ["d3d11"]

d3d12 = []
d3d12_interop = ["d3d12"]

[lib]
name = "diligent_sys"
path = "lib.rs"