[package]
name = "diligent_sys"
version = "0.1.0" # TODO : update to the version from the C++ diligent repo
edition = "2021"
build = "build.rs"
exclude = ["/DiligentEngine", "**/assets"]

[build-dependencies]
bindgen = "0.71.1"
cmake   = "0.1.54"

[features]
vulkan = []
vulkan_interop = ["vulkan"]

opengl = []
opengl_interop = ["opengl"]

d3d11 = []
d3d11_interop = ["d3d11"]

d3d12 = []
d3d12_interop = ["d3d12"]

metal = []
metal_interop = ["metal"]

gles = []
gles_interop = ["gles"]

webgpu = []
webgpu_interop = ["webgpu"]

[lib]
name = "diligent_sys"
path = "lib.rs"