[package]
name = "diligent_sys"
version = "2.5.6"
edition = "2024"
description  = "Raw FFI bindings of the Diligent Engine"
categories   = ["graphics", "rendering"]
license = "MIT"
build = "build.rs"
exclude = ["/DiligentEngine"]

[build-dependencies]
bindgen = "0.71.1"

[features]
vulkan = []
vulkan_interop = ["vulkan"]

opengl = []
opengl_interop = ["opengl"]

d3d11 = []
d3d11_interop = ["d3d11"]

d3d12 = []
d3d12_interop = ["d3d12"]

metal = []
metal_interop = ["metal"]

gles = []
gles_interop = ["gles"]

webgpu = []
webgpu_interop = ["webgpu"]

[lib]
name = "diligent_sys"
path = "lib.rs"