[package]
name = "diligent_samples"
version = "0.1.0"
edition = "2024"
exclude = ["**/assets"]

[dependencies]
imgui             = "0.12.0"
image             = "0.25.9"
glam              = "0.30.10"
clap              = { version = "4.5.54", features = ["cargo"] }
rand              = "0.9.2"
bitflags          = "2.10.0"
static_assertions = "1.1.0"
bon               = "3.8.2"

[target.'cfg(unix)'.dependencies]
xcb       = { version = "1.7.0",  optional = true, features = ["as-raw-xcb-connection"] }
xkbcommon = { version = "0.9.0",  optional = true, features = ["x11"]}
x11       = { version = "2.21.0", optional = true }

[target.'cfg(windows)'.dependencies]
windows = {version = "0.62.2" , features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging", "Win32_UI_Shell", "Win32_UI_Input_KeyboardAndMouse"] }

[dependencies.diligent]
path = ".."

[features]
# Vulkan is present on all platforms, so let's set it as the default backend for now.
default = ["vulkan"]

vulkan = ["diligent/vulkan", "xcb", "xkbcommon"]
opengl = ["diligent/opengl", "x11"]
d3d11  = ["diligent/d3d11"]
d3d12  = ["diligent/d3d12"]
metal  = ["diligent/metal"]
gles   = ["diligent/gles"]
webgpu = ["diligent/webgpu"]

[lib]
name = "diligent_samples"

[[example]]
name = "Asteroids"
path = "src/samples/asteroids/asteroids.rs"

[[example]]
name = "Atmosphere"
path = "src/samples/atmosphere/atmosphere.rs"

[[example]]
name = "Shadows"
path = "src/samples/shadows/shadows.rs"

[[example]]
name = "Tutorial01_HelloTriangle"
path = "src/tutorials/tutorial01_hello_triangle.rs"

[[example]]
name = "Tutorial02_Cube"
path = "src/tutorials/tutorial02_cube.rs"

[[example]]
name = "Tutorial03_Texturing"
path = "src/tutorials/tutorial03_texturing.rs"

[[example]]
name = "Tutorial04_Instancing"
path = "src/tutorials/tutorial04_instancing.rs"

[[example]]
name = "Tutorial05_TextureArray"
path = "src/tutorials/tutorial05_texture_array.rs"

[[example]]
name = "Tutorial06_MultiThreading"
path = "src/tutorials/tutorial06_multithreading.rs"

[[example]]
name = "Tutorial07_GeometryShader"
path = "src/tutorials/tutorial07_geometry_shader.rs"

[[example]]
name = "Tutorial08_Tessellation"
path = "src/tutorials/tutorial08_tessellation.rs"

[[example]]
name = "Tutorial09_Quads"
path = "src/tutorials/tutorial09_quads.rs"

[[example]]
name = "Tutorial10_DataStreaming"
path = "src/tutorials/tutorial10_data_streaming.rs"

[[example]]
name = "Tutorial11_ResourceUpdates"
path = "src/tutorials/tutorial11_resource_updates.rs"

[[example]]
name = "Tutorial12_RenderTarget"
path = "src/tutorials/tutorial12_render_target.rs"

[[example]]
name = "Tutorial13_ShadowMap"
path = "src/tutorials/tutorial13_shadow_map.rs"

[[example]]
name = "Tutorial14_ComputeShader"
path = "src/tutorials/tutorial14_compute_shader.rs"

[[example]]
name = "Tutorial15_MultipleWindows"
path = "src/tutorials/tutorial15_multiple_windows.rs"

[[example]]
name = "Tutorial16_BindlessResources"
path = "src/tutorials/tutorial16_bindless_resources.rs"

[[example]]
name = "Tutorial17_MSAA"
path = "src/tutorials/tutorial17_msaa.rs"

[[example]]
name = "Tutorial18_Queries"
path = "src/tutorials/tutorial18_queries.rs"

[[example]]
name = "Tutorial19_RenderPasses"
path = "src/tutorials/tutorial19_render_passes.rs"

[[example]]
name = "Tutorial20_MeshShader"
path = "src/tutorials/tutorial20_mesh_shader.rs"

[[example]]
name = "Tutorial21_RayTracing"
path = "src/tutorials/tutorial21_ray_tracing.rs"

[[example]]
name = "Tutorial22_HybridRendering"
path = "src/tutorials/tutorial22_hybrid_rendering.rs"

[[example]]
name = "Tutorial23_CommandQueues"
path = "src/tutorials/tutorial23_command_queues.rs"

[[example]]
name = "Tutorial24_VRS"
path = "src/tutorials/tutorial24_vrs.rs"

[[example]]
name = "Tutorial25_StatePackager"
path = "src/tutorials/tutorial25_state_packager.rs"

[[example]]
name = "Tutorial26_StateCache"
path = "src/tutorials/tutorial26_state_cache.rs"

[[example]]
name = "Tutorial27_PostProcessing"
path = "src/tutorials/tutorial27_post_processing.rs"

[[example]]
name = "Tutorial28_HelloOpenXR"
path = "src/tutorials/tutorial28_hello_open_xr.rs"

[[example]]
name = "Tutorial29_OIT"
path = "src/tutorials/tutorial29_oit.rs"