[package]
name = "diligent_tools"
version = "0.1.0"
edition = "2021"
exclude = ["**/assets"]

[dependencies]
static_assertions = "1.1.0"
bitflags          = "2.6.0"
imgui             = "0.12.0"

[target.'cfg(unix)'.dependencies]
xcb = { version = "1.5.0",  optional = true }
x11 = { version = "2.21.0", optional = true}

[target.'cfg(windows)'.dependencies]
windows = {version = "0.60.0" , features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging",] }

[dependencies.diligent]
path = ".."

[features]
vulkan = ["diligent/vulkan", "xcb"]
opengl = ["diligent/opengl", "x11"]
d3d11  = ["diligent/d3d11"]
d3d12  = ["diligent/d3d12"]
metal  = ["diligent/metal"]
gles   = ["diligent/gles"]
webgpu = ["diligent/webgpu"]

[lib]
name = "diligent_tools"