[package]
name = "diligent_tools"
version = "0.1.0"
edition = "2021"
exclude = ["**/assets"]

[dependencies]
static_assertions = "1.1.0"
bitflags          = "2.10.0"
imgui             = "0.12.0"
bon               = "3.8.2"

[target.'cfg(unix)'.dependencies]
xcb       = { version = "1.7.0",  optional = true, features = ["as-raw-xcb-connection"] }
xkbcommon = { version = "0.9.0",  optional = true, features = ["x11"]}
x11       = { version = "2.21.0", optional = true }

[target.'cfg(windows)'.dependencies]
windows = {version = "0.62.2" , features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging", "Win32_UI_Shell", "Win32_UI_Input_KeyboardAndMouse"] }

[dependencies.diligent]
path = ".."

[features]
vulkan = ["diligent/vulkan", "xcb", "xkbcommon"]
opengl = ["diligent/opengl", "x11"]
d3d11  = ["diligent/d3d11"]
d3d12  = ["diligent/d3d12"]
metal  = ["diligent/metal"]
gles   = ["diligent/gles"]
webgpu = ["diligent/webgpu"]

[lib]
name = "diligent_tools"